sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:11: error: value toInteger is not a member of Double
      ecart = (ecart.toDouble / 1.3).toInteger
                                     ^AlgCombSort:24: error: not found: value aMixe
  } while (ecart>1 || aMixe)
                      ^