sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  
  var ecart = getNombreValeurs()
  do {
    
    var aMixe = false
    
    if (ecart > 1) {
      
      ecart = (ecart.toDouble / 1.3).toInteger
      
    }
    
    var i = 0
    
    while (i+ecart < getNombreValeurs()) {
      
      if (!plusPetit(i+ecart,i)) {echange(i,i+ecart)}
      i = i + 1
      
    }
    
  } while (ecart>1 || aMixe)
}